--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for TV-ProgrammesSchedules-Sony
 
+0.03    Mon Apr 18 15:02:00 2011
+        - Renamed title "SYNOPSIS" to "DESCRIPTION".
+        - Minor changes to method as_string().
+        - Cosmetics changes.
+
 0.02    Wed Apr 13 15:35:10 2011
         - Added internal method _validate_param().
         - Added unit test 01-unit-test.t for method _validate_param().
