--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for TV-ProgrammesSchedules-Sony
 
+0.04    Mon May 02 14:54:01 2011
+        - Added method as_xml() to return listings in XML format.
+
 0.03    Mon Apr 18 15:02:00 2011
         - Renamed title "SYNOPSIS" to "DESCRIPTION".
         - Minor changes to method as_string().
